# gcig-app

./: .gitignore  CLAUDE.md  README.md  landing-animated.html  landing-v2.html  landing.html  render.yaml
.github/workflows/: daily-backup.yml  daily-snapshot.yml  server-tests.yml  weekly-summary.yml
CPI perdictor/: .gitignore  README.md  diagnose_misses.py  pyproject.toml
CPI perdictor/src/cpi_forecaster/: api_client.py  backtest.py  cli.py  ensemble.py  features.py  fred.py  model_registry.py  nowcast.py  nowcast_accel.py  nowcast_adaptive.py  nowcast_agreement.py  nowcast_altcpi.py  nowcast_anomaly.py  nowcast_ar_residual.py  nowcast_bagged.py  nowcast_bayes_stack.py  nowcast_bma.py  nowcast_clev.py  nowcast_clev_bagged.py  nowcast_clev_calibrated.py  nowcast_clev_conformal.py  nowcast_clev_pure.py  nowcast_clev_trajectory.py  nowcast_conformal.py  nowcast_crossfeat.py  nowcast_ensemble.py  nowcast_ets.py  nowcast_extratrees.py  nowcast_features.py  nowcast_gam.py  nowcast_grnyll.py  nowcast_heteroskedastic.py  nowcast_hingeloss.py  nowcast_histgbm.py  nowcast_huber.py  nowcast_isotonic.py  nowcast_kitchen.py  nowcast_knn_clev.py  nowcast_lasso_select.py  nowcast_lstm.py  (+53 more)
CPI perdictor/src/cpi_forecaster/models/: __init__.py  ridge.py  sarima.py  xgb.py
CPI perdictor/src/cpi_forecaster/strategies/: __init__.py  agent_a_tuned.py  agent_aa_advval.py  agent_aaa_megafeat.py  agent_b_direct.py  agent_bb_cumulative.py  agent_bbb_quantilewide.py  agent_c_features.py  agent_cc_theilsen.py  agent_ccc_rffwide.py  agent_d_kitchensink.py  agent_dd_attention.py  agent_ddd_pcawide.py  agent_e_stacking.py  agent_ee_bestbest.py  agent_eee_energyspec.py  agent_f_regime.py  agent_ff_tips.py  agent_fff_services.py  agent_g_quantile.py  agent_gg_median.py  agent_ggg_tipsonly.py  agent_h_var.py  agent_hh_sticky.py  agent_hhh_bagquantilewide.py  agent_i_dirrec.py  agent_ii_yieldcurve.py  agent_iii_bestbestwide.py  agent_j_bma.py  agent_jj_pce.py  agent_k_factor.py  agent_kk_labor.py  agent_l_select.py  agent_ll_housing.py  agent_m_bagging.py  agent_mm_credit.py  agent_n_theta.py  agent_nn_energy.py  agent_o_analog.py  agent_oo_sentiment.py  (+26 more)
client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/api/: client.js  fileHelpers.js  safeUrl.js  sea.js
client/src/components/: Button.jsx  (+22 more)
sandbox/: README.md  pyproject.toml
sandbox/grade_predictor/: db.py  llm.py  prompts.py  server.py
scripts/: build-hurdat2-fixture.mjs
sea_tracker/: README.md  ais_client.py  api_client.py  backtest.py  classify.py  cli.py  collector.py  config.example.toml  config.py  db.py  derived.py  enrich.py  geo.py  health.py  normalize.py  prices.py  probe.py  publish.py  pyproject.toml  rdp.py  report.py  sar.py  signals.py  snapshot.py
sea_tracker/tests/: test_api_client.py  test_rdp.py  test_snapshot.py
server/: .env.example  package-lock.json  package.json
server/prisma/: schema.prisma  seed.js
server/scripts/: pull-voo.js
server/src/: index.js
(+245 files in other folders)
