[project]
name = "cpi-forecaster"
version = "0.1.0"
description = "Monthly US CPI forecaster — pulls FRED, runs SARIMA + Ridge + XGBoost ensemble, posts to gcig-api."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=15.0",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "xgboost>=2.0",
  "python-dateutil>=2.9",
]

[project.scripts]
cpi-forecast = "cpi_forecaster.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
