[project]
name = "sea_tracker"
version = "0.1.0"
description = "Persian Gulf tanker AIS pipeline + signal publisher for gcig-app."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "typer>=0.12",
    "rich>=13.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "plotly>=5.24",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
sea_tracker = "sea_tracker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
